# CourseWork_SV_2

./: .env.sample  .flake8  .gitignore  README.md  main.py  pyproject.toml
data/: vacancies.json
src/: filters.py  hh_api.py  json_saver.py  vacancy.py
src/utils/: fijters.py
tests/: test_filters.py  test_hh_api.py  test_json_saver.py  test_vacancy.py
