[project]
name = "course-work-sv-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Svetlana Kolesnikova", email = "sv.ps1286@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.17.1"
black = "^25.1.0"
isort = "^6.0.1"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.git          # Исключить несколько общих каталогов
                     # в корне проекта
  )/
)
'''

[tool.isort]
# максимальная длина строки
line_length = 119

[tool.coverage.report]
# исключение для покрытия тестами
exclude_also = [
    "if __name__ == .__main__.:",
    ]
